fixed alignment issues

--- a/Styles.css
+++ b/Styles.css
@@ -69,6 +69,7 @@ body{
 
 .sp{
   margin-left: 6px;
+  margin-right: 5px;
 }
 
 .quote{
